[add] Init class, Clientsdesk page register, Settings and Dashboard subpages

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,21 @@
 {
-    "name": "clientsdesk/clientsdesk-wp-plugin",
-    "description": "Clientsdesk.net Wordpress plugin. Serving Web Forms connection",
-    "type": "project",
-    "require": {
-        "clientsdesk/clientsdesk-api-client-php": "."
-    },
-    "license": "GPL",
-    "authors": [
-        {
-            "name": "Alex Baidan",
-            "email": "howtwizer@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev"
+  "name": "clientsdesk/clientsdesk-wp-plugin",
+  "description": "Clientsdesk.net Wordpress plugin. Serving Web Forms connection",
+  "type": "project",
+  "require": {
+    "clientsdesk/clientsdesk-api-client-php": "dev-master"
+  },
+  "license": "GPL",
+  "authors": [
+    {
+      "name": "Alex Baidan",
+      "email": "howtwizer@gmail.com"
+    }
+  ],
+  "minimum-stability": "dev",
+  "autoload": {
+    "psr-4": {
+      "Inc\\": "./Inc"
+    }
+  }
 }
